# search-experiments

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  docker-compose.yaml  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yaml
data/: datasets.schema.yaml  datasets.yaml  datasets_schema.py
dataset/: datasets.yaml  datasets_schema.py
experiments/: extract_text_from_pdf.ipynb  generate_query.ipynb  generate_query_answer_pairs.ipynb  gpu_test.ipynb  llamatest.ipynb  pdf_scrap.py  pipeline.ipynb  queries.jsonl  queries_with_modules.jsonl  retriv.ipynb  test_doctr.ipynb  test_florence.ipynb  test_pix2struct.ipynb  to_markdown.py
experiments/pipeline/: rag.ipynb
pipeline/: __init__.py  __main__.py  file_to_text.py  pipeline.ipynb  search.py  types.py  upload_files.py
pymupdf4llm/: __init__.py  elements.py  identify_headers.py  process_graphics.py  rectangle_utils.py  resolve_links.py  write_markdown.py
pymupdf4llm/helpers/: get_text_lines.py  multi_column.py  pymupdf_rag.py
pymupdf4llm/llama/: pdf_markdown_reader.py
scripts/: .gitignore  concat_meta.py  generate_schemas.py  scrap.py  scrap_dorm.py  scrap_moodle.py  scrap_university.py
validation/: README.md  concat.py  example.meta.json  extract.ipynb  form.queries.csv  queries.jsonl  validate.py
validation/queries/: form.moodle.jsonl
validation/queries_raw/: dima.moodle.jsonl  form.any.jsonl  form.campus.jsonl  form.city.jsonl  form.moodle.jsonl  form.university.jsonl
