[tool.poetry]
name = "innohassle-search-experiments"
version = "0.1.0"
description = ""
authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<=3.11.99"
langchain-community = "^0.2.5"
ollama = "^0.2.1"
langchainhub = "^0.1.18"
langchain = "^0.2.5"
pydantic = "^2.7.4"
pyyaml = "^6.0.1"
ruff = "^0.4.9"
httpx = "^0.27.0"
tqdm = "^4.66.4"
dvc = "^3.51.2"
dvc-gdrive = "^3.0.1"
pytesseract = "^0.3.10"
torch = {version = "^2.3.1+cu121", source = "pytorch-cu121"}
torchvision = {version = "^0.18.1+cu121", source = "pytorch-cu121"}
torchaudio = {version = "^2.3.1+cu121", source = "pytorch-cu121"}
accelerate = "^0.31.0"
bitsandbytes = "^0.43.1"
nltk = "^3.8.1"
jupyter = "^1.0.0"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]
lint.unfixable = ["F401"]
