[tool.poetry]
name = "search-experiments"
version = "0.1.0"
description = ""
authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<=3.11.99"
accelerate = "^0.31.0"
bitsandbytes = "^0.43.1"
dvc = "^3.51.2"
dvc-gdrive = "^3.0.1"
faiss-cpu = "^1.8.0.post1"
httpx = "^0.27.0"
jupyter = "^1.0.0"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchainhub = "^0.1.18"
minio = "^7.2.7"
nltk = "^3.8.1"
ollama = "^0.2.1"
pandas = "^2.2.2"
pre-commit = "^3.7.1"
pydantic = "^2.7.4"
pymupdf4llm = { url = "https://github.com/dantetemplar/pymupdf4llm/releases/download/0.1.3/pymupdf4llm-0.1.3.tar.gz" }
pytesseract = "^0.3.10"
pyyaml = "^6.0.1"
ranx = "^0.3.20"
retriv = "^0.2.3"
ruff = "^0.4.9"
sentence-transformers = "^3.0.1"
torch = { version = "^2.3.1+cu118", source = "pytorch-cu118" }
torchvision = { version = "^0.18.1+cu118", source = "pytorch-cu118" }
tqdm = "^4.66.4"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 120
lint.ignore = [
    # wildcard imports are fine
    "F403",
    "F405",
]
lint.unfixable = ["F401"]
